WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24139
ScriptInstance.h missing an #include
https://bugs.webkit.org/show_bug.cgi?id=24139
Summary
ScriptInstance.h missing an #include
Mark Mentovai
Reported
2009-02-24 14:39:55 PST
There's an #include missing in WebCore/bindings/v8/ScriptInstance.h. The file uses RefPtr.h and so should #include <wtf/RefPtr.h>. Dimitri, you broke my build!
Attachments
fix
(876 bytes, patch)
2009-02-24 14:43 PST
,
Mark Mentovai
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Mentovai
Comment 1
2009-02-24 14:43:02 PST
Created
attachment 27937
[details]
fix
Eric Seidel (no email)
Comment 2
2009-02-24 14:53:04 PST
Comment on
attachment 27937
[details]
fix Looks OK.
Dimitri Glazkov (Google)
Comment 3
2009-02-24 15:15:43 PST
I break builds because it gives me false sense of power which offers momentary relief of the overwhelming feeling of insecurity. BTW, why are you using these? I haven't updated the projects to use them yet :)
Mark Mentovai
Comment 4
2009-02-24 15:17:13 PST
The gyp-based build is not bound by your puny project files. I look for added files after WebKit merges and add them. It's the only way to keep myself green.
Dimitri Glazkov (Google)
Comment 5
2009-02-24 15:18:40 PST
Well, be careful young Jedi. The files in bindings/v8/custom lack corresponding inliners in V8Proxy, which I haven't yet landed.
Mark Mentovai
Comment 6
2009-02-24 15:21:17 PST
Thanks, I'll pull them back out if I have to. I was wondering how the missing #include didn't break any of the "proper" builds. This change should still be checked in.
Dimitri Glazkov (Google)
Comment 7
2009-02-24 15:23:10 PST
Landed as
http://trac.webkit.org/changeset/41194
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug