2009-02-24  Mark Mentovai  <mark@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24139
        Add missing include.

        * bindings/v8/ScriptInstance.h:

Canonical link: https://commits.webkit.org/33269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41194 268f45cc-cd09-0410-ab3c-d52691b4dbfc