WebCore/bindings/v8/ScriptInstance.h
@@ -35,6 +35,7 @@
 
 #include <wtf/PassRefPtr.h>
 #include <wtf/RefCounted.h>
+#include <wtf/RefPtr.h>
 
 namespace WebCore {
 
